--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<html>
-<head><title>coba</title></heaad>
-<body>
-coba
-</body>
-</html>
+<?php
+ header('Content-Type: application/json; charset=utf8');
+ //panggil koneksi.php
+ //include("koneksi.php");
+
+ //query tabel produk
+ //$sql="SELECT * FROM produk";
+ //$query=mysql_query($sql) or die(mysql_error());
+
+//data array
+ $array=array();
+ //while($data=mysql_fetch_assoc($query)) $array[]=$data; 
+ $array[]="testing program"
+//mengubah data array menjadi json
+ echo json_encode($array);
+?>
