--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
-<?php
- header('Content-Type: application/json; charset=utf8');
- //panggil koneksi.php
- //include("koneksi.php");
-
- //query tabel produk
- //$sql="SELECT * FROM produk";
- //$query=mysql_query($sql) or die(mysql_error());
-
-//data array
- $array=array();
- //while($data=mysql_fetch_assoc($query)) $array[]=$data; 
- $array[]="testing program"
-//mengubah data array menjadi json
- echo json_encode($array);
-?>
+<pre style="background-color: #001f3f"><code id="json-container"></code></pre>
+<script>
+    const data = {
+      color: 'red',
+      wheels: 4,
+      engine: {
+        cylinders: 4,
+        size: 2.2
+      }
+    }
+    
+    document.getElementById('json-container').innerHTML = JSON.stringify(data, null, 2);
+</script>
